[gd_scene load_steps=18 format=3 uid="uid://d3acxhpksdjm8"]

[ext_resource type="Script" path="res://scenes/gameplay/player/player.gd" id="1_1npac"]
[ext_resource type="Texture2D" uid="uid://kj7p2up21min" path="res://assets/old_assets/player_assets/player.png" id="2_w6ows"]
[ext_resource type="Script" path="res://scenes/gameplay/player/collision_handler.gd" id="3_kklvi"]

[sub_resource type="AtlasTexture" id="AtlasTexture_3jwal"]
atlas = ExtResource("2_w6ows")
region = Rect2(0, 0, 18, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_6i7yc"]
atlas = ExtResource("2_w6ows")
region = Rect2(18, 0, 18, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_3w0hu"]
atlas = ExtResource("2_w6ows")
region = Rect2(36, 0, 18, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_0v6tv"]
atlas = ExtResource("2_w6ows")
region = Rect2(0, 96, 18, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_gk1sg"]
atlas = ExtResource("2_w6ows")
region = Rect2(18, 96, 18, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_uvp32"]
atlas = ExtResource("2_w6ows")
region = Rect2(36, 96, 18, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_o8du4"]
atlas = ExtResource("2_w6ows")
region = Rect2(0, 64, 18, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_gnext"]
atlas = ExtResource("2_w6ows")
region = Rect2(18, 64, 18, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_m1fh1"]
atlas = ExtResource("2_w6ows")
region = Rect2(36, 64, 18, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_d35jp"]
atlas = ExtResource("2_w6ows")
region = Rect2(0, 32, 18, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ww8fc"]
atlas = ExtResource("2_w6ows")
region = Rect2(18, 32, 18, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_s3mxu"]
atlas = ExtResource("2_w6ows")
region = Rect2(36, 32, 18, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_q7nng"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_3jwal")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6i7yc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3jwal")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3w0hu")
}],
"loop": true,
"name": &"walk_down",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_0v6tv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gk1sg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0v6tv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uvp32")
}],
"loop": true,
"name": &"walk_left",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_o8du4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gnext")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_o8du4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_m1fh1")
}],
"loop": true,
"name": &"walk_right",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_d35jp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ww8fc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d35jp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_s3mxu")
}],
"loop": true,
"name": &"walk_up",
"speed": 5.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_ilbje"]
radius = 4.0
height = 12.0

[node name="Player" type="CharacterBody2D"]
z_index = 3
y_sort_enabled = true
collision_layer = 0
collision_mask = 0
script = ExtResource("1_1npac")
metadata/_edit_lock_ = true

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
y_sort_enabled = true
sprite_frames = SubResource("SpriteFrames_q7nng")
animation = &"walk_up"
centered = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(9, 28)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_ilbje")

[node name="CollisionHandler" type="Node2D" parent="." node_paths=PackedStringArray("current_map")]
script = ExtResource("3_kklvi")
current_map = NodePath("")

[node name="BottomLeft" type="Marker2D" parent="CollisionHandler"]
position = Vector2(1, 33)
gizmo_extents = 0.0

[node name="BottomCenter" type="Marker2D" parent="CollisionHandler"]
position = Vector2(9, 33)
gizmo_extents = 0.0

[node name="BottomRight" type="Marker2D" parent="CollisionHandler"]
position = Vector2(16, 33)
gizmo_extents = 0.0

[node name="CenterLeft" type="Marker2D" parent="CollisionHandler"]
position = Vector2(1, 28)
gizmo_extents = 0.0

[node name="CenterCenter" type="Marker2D" parent="CollisionHandler"]
position = Vector2(9, 28)
gizmo_extents = 0.0

[node name="CenterRight" type="Marker2D" parent="CollisionHandler"]
position = Vector2(16, 28)
gizmo_extents = 0.0

[node name="TopLeft" type="Marker2D" parent="CollisionHandler"]
position = Vector2(1, 23)
gizmo_extents = 0.0

[node name="TopCenter" type="Marker2D" parent="CollisionHandler"]
position = Vector2(9, 23)
gizmo_extents = 0.0

[node name="TopRight" type="Marker2D" parent="CollisionHandler"]
position = Vector2(16, 23)
gizmo_extents = 0.0

[node name="TileMap" type="TileMap" parent="."]
format = 2
